# eagine-ecs

./: .gitmodules  CMakeLists.txt  README.rst
config/: EAGinePackageECS.cmake
deploy/: CMakeLists.txt
deploy/debian/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.sh.in
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/dev/: CMakeLists.txt  build-pkg.py.in
doc/doxygen/include/: ecs.hpp
docker/deb_test/dev/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint
docker/deb_test/dev/example/: CMakeLists.txt
example/eagine/: CMakeLists.txt
example/eagine/ecs/: 000_particles.cpp  001_hello.cpp  001_hello_manager.cpp  001_hello_object.cpp  002_signals.cpp  002_space_opera.cpp  003_space_opera.cpp  004_space_objects.cpp  CMakeLists.txt  deb-changelog
example/eagine/ecs/elements/: CMakeLists.txt  components.hpp  decay_modes.hpp  elements.json  entity.hpp  init.cpp  init.hpp  main_basic.cpp  main_decay_chain.cpp  relations.hpp
include/: CMakeLists.txt  Sources.cmake
include/eagine/ecs/: basic_manager.hpp  basic_manager.inl  cmp_storage.hpp  component.hpp  entity_traits.hpp  manipulator.hpp  rel_storage.hpp  storage_caps.hpp
include/eagine/ecs/config/: basic.hpp
include/eagine/ecs/storage/: std_map.hpp
source/: CMakeLists.txt
source/lib/: CMakeLists.txt  basic_manager.cpp  epilogue.inl  implement.inl  prologue.inl
source/modules/eagine/: CMakeLists.txt  cmp_storage.cpp  component.cpp  deb-changelog  ecs.cpp  entity_traits.cpp  manager.cpp  manager_chunk_map_test.cpp  manager_flat_map_idv_test.cpp  manager_flat_map_test.cpp  manager_std_map_test.cpp  manager_test.cpp  manipulator.cpp  map_storage.cpp  object.cpp  object_impl.cpp  object_test.cpp  rel_storage.cpp  std_map_storage.cpp  storage.cpp  storage_test.cpp
